--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "bootstrap": "^5.0.1",
+    "bootstrap4": "^0.0.1-security",
     "popper": "^1.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
